--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,15 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+}
 
+body {
+    height: 100%;
+    overflow-x: hidden;
 }
 
 .barra-navegacao {
-    background-color: #ffecd1;
+    background-color: #FFECD1;
 }
 
 #barra-navegacao li a{
@@ -18,8 +22,172 @@
 #barra-navegacao li a:hover{
     color: #ff8001;
 }
+
 #barra-navegacao button {
-    background-color: #8e4700;
+    background-color: #8E4700;
     border-radius: 8px;
+    color: #FFF;
+}
+
+#barra-navegacao button:hover {
+    background-color: #ff8001;
+}
+
+footer {
+    background-color: #000;
+    height: 100px;
+}
+
+footer p {
     color: #fff;
+    position: absolute;
+    width: 100%;
+}
+
+#home {
+    background-image: url('../img/banner.png');
+    background-size: cover;
+    height: 550px;
+    background-position: center;
+    margin-bottom: 0;
+}
+
+#home h1 {
+    color: #fff;
+}
+
+#home button {
+    background-color: #F07C00;
+    color: #fff;
+    border-radius: 15px;
+    padding: 10px;
+    transition: all 0.5s;
+}
+
+#home button:hover {
+    background-color: #FFBF75;
+}
+
+#sobre {
+    background-color: #FFECD1;
+    padding: 0;
+    margin-bottom: 0 ;
+}
+
+#sobre .paragrafo-sobre-1 {
+    font-size: 26px;
+    font-weight: bold;
+    color: #8E4700;
+    margin-bottom: 20px;
+}
+
+#sobre .paragrafo-sobre-2 {
+    font-size: 20px;
+    color: #553311;
+    margin-bottom: 20px;
+}
+
+#sobre .paragrafo-sobre-2 span {
+    font-weight: bold;
+    color: #8E4700;
+}
+
+#sobre .paragrafo-sobre-3 {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #663300;
+    font-weight: bold;
+    padding: 0;
+}
+
+.lista-atividades {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.lista-atividade li{
+    font-size: 10px;
+    color: #553311;
+    margin-bottom: 12px;
+    padding-left: 30px;
+    position: relative;
+}
+.lista-atividade li span{
+    top: 0%;
+    left: 50%;
+    transform: translateY(-50%);
+    position: absolute;
+    font-size: 20px;
+    color: #8E4700;
+}
+
+#info {
+    background-image: url('../img/back_info.jpg');
+    background-size: cover;
+    background-position: center ;
+    padding: 60px;
+    margin: 0;
+
+}
+
+#info .container-info {
+    background-color: rgba(102, 51, 0, 0.6);
+    padding: 30px;
+}
+
+#info .container-card {
+    width: 100%;
+    height: 250px;
+    background-color: #FFECD1;
+    border-radius:15px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+#info .container-card h5 {
+    font-weight: bold;
+    color: #8e4700;
+    margin-bottom: 10px;
+}
+#info .container-card p{
+    color: #FFBF75;
+    text-decoration: line-through 1px #000;
+    font-size: 16px;
+    margin-bottom:5px;
+}
+
+#info .container-card .lote-atual {
+    text-decoration: none;
+    color: #663300;
+    font-size: 18px;
+}
+
+#info .container-card .lote-atual .texto-endereco {
+    text-decoration: none;
+    color: #553311;
+    font-size: 14px;
+}
+
+#contato {
+    background-color:rgb(255, 237, 198) ;
+    padding: 40px 0;
+    margin: 0;
+    
+}
+
+#contato h4{
+    color: #8e4700;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+}
+
+#contato .btn-enviar {
+    background-color: #8E4700;
+    color: #fff;
+    border-radius: 15px;
+    padding: 12px 40px;
+    font-size: 16px;
+}
+
+#contato .btn-enviar:hover {
+    background-color: #F07C00;
 }
