--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,14 @@ header {
     background: rgba(0, 0, 0, 0.7);
 }
 
+.navbar navbar-expand-lg {
+    position: sticky;
+    top: 0; /* Fica fixo a partir do topo */
+    z-index: 1030; /* Certifique-se de que está acima de outros elementos */
+    background-color: #A62639; /* Cor de fundo para diferenciar do conteúdo ao rolar */
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); /* Opcional: Adiciona uma sombra para destacar o header */
+}
+
 #cta {
     background-image: url('img/wallpaper');
     background-size: cover;
